syntax = "proto3";




message Empty{}
message CustomerRequestId{
  int32 id=1;
}
message CustomerList{
  repeated  Customer customers=1;
}

message Customer{
  int32 id=1;
  string name=2;
  int32 age=3;
  string address=4;
  

}

message UpdateCustomerRequest{
  int32 id=1;
  Customer customer=2;
}

service CustomerService{
  rpc GetAll(Empty) returns(CustomerList){}
  rpc GetCustomer(CustomerRequestId) returns(Customer){}
  rpc AddCustomer(Customer) returns(Customer){}
  rpc UpdateCustomer(UpdateCustomerRequest) returns(Customer){}
  rpc RemoveCustomer(CustomerRequestId) returns(Empty){}

}


